--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           Select you Pomeranian
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Size</a>
-          <a class="dropdown-item" href="#">Color</a>
-          <a class="dropdown-item" href="#">Age</a>
+          <a class="dropdown-item" href="#">by Size</a>
+          <a class="dropdown-item" href="#">by Color</a>
+          <a class="dropdown-item" href="#">by Age</a>
         </div>
       </li>
     </ul>
